--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ body {
     position: relative;
     width: 100%;
     height: 90vh;
-    background: url(/assets/banner.png) no-repeat center/cover;
+    background: url(assets/banner.png) no-repeat center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -458,7 +458,7 @@ h1 {
 .section-three {
     position: relative;
     width: 100%;
-    background: url('/assets/Group 12896.png') no-repeat center center/cover;
+    background: url('assets/Group 12896.png') no-repeat center center/cover;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
